# sisyphos

./: .env.example  .gitignore  .mkdocs.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  nginx.conf  vcpkg.json
.github/workflows/: build_test.yml  release.yml
cmake/: vcpkg.cmake
docs/: index.md
docs/api/: index.md
docs/internals/: STRUCTURE.md  architecture.md  functional_requirements.md  non_functional_requirements.md  structure.md
docs/user-guide/: index.md
scripts/: hooks.json  redeploy.sh
src/editor/: CMakeLists.txt
src/editor/src/: main.cpp
src/engine/: CMakeLists.txt
src/engine/include/: window.hpp
src/engine/include/opengl/: ebo.hpp  enums.hpp  framebuffer.hpp  renderbuffer.hpp  renderer.hpp  shader.hpp  shaderprogram.hpp  ssbo.hpp  texture.hpp  ubo.hpp  vao.hpp  vbo.hpp
src/engine/src/: window.cpp
src/engine/src/opengl/: ebo.cpp  framebuffer.cpp  renderbuffer.cpp  shader.cpp  shaderprogram.cpp  ssbo.cpp  texture.cpp  ubo.cpp  vao.cpp  vbo.cpp
src/launcher/: CMakeLists.txt
src/launcher/shaders/: triangle.frag  triangle.vert
src/launcher/src/: main.cpp
tests/: CMakeLists.txt  test_hello.cpp
